--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,8 @@
     font-family: poppins;
     margin: 0;
     padding: 0;
+    
    }
+   body{
+    overflow-x: hidden;
+  }
